--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,67 @@
     transform: rotate(360deg);
   }
 }
+
+/* img {
+  width: 40px;
+  height: 40px;
+} */
+a {
+  text-decoration: none !important;
+  color: #00bcd4 !important;
+}
+
+.myThumbnail {
+  width: 100%;
+  overflow: hidden;
+}
+
+.myThumbnail img {
+  width: 100%;
+}
+
+.myImg {
+  position: relative;
+}
+.myImg p {
+  position: absolute;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.6);
+  color: #fff;
+  width: 100%;
+  display: block;
+  margin: 0;
+  padding: 15px 10px;
+  text-align: center;
+}
+.myDetail h2,
+.myDetail p {
+  text-align: center;
+}
+
+.circleImg {
+  width: 100%;
+
+  overflow: hidden;
+}
+.circleImg img {
+  position: absolute;
+  top: 50%;
+  width: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@media (max-width: 600px) {
+  .circleImg img {
+    width: 70%;
+  }
+}
+
+.by {
+  color: black !important;
+}
+
+.date {
+  color: black !important;
+}
